--- a/app/src/main/res/layout/fragment_nueva_encuesta.xml
+++ b/app/src/main/res/layout/fragment_nueva_encuesta.xml
@@ -20,15 +20,14 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context=".encuesta.NuevaEncuestaFragment">
 
-    <TextView
-        android:layout_marginTop="50dp"
-        android:id="@+id/tvTitulo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Alimento: yogurt bebible entero"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Spinner
+            android:id="@+id/spinnerAlimento"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
+            tools:ignore="MissingConstraints" />
 
     <LinearLayout
         android:id="@+id/layoutPorcion"
