--- a/app/src/main/res/layout/fragment_estadistica.xml
+++ b/app/src/main/res/layout/fragment_estadistica.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".estadistica.estadistica">
+    tools:context=".estadistica.EstadisticaFragment">
 
-    <TextView
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/pieChart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
